刊登領養管理-版面配置 其餘變數小修改

--- a/src/main/resources/templates/animal_discuss.html
+++ b/src/main/resources/templates/animal_discuss.html
@@ -238,7 +238,7 @@
                 </tr>
             </table>
         </div>
-        <!-- 顯示查詢資訊 -->
+        <!-- 顯示資料筆數及頁碼 -->
         <div class="row ftco-animate">
             <div class="col-12 p-3 text-center">
                 <div class="block-27">
