--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <!-- 顯示查詢資訊 -->
+        <!-- 顯示資料筆數及頁碼 -->
         <div class="row ftco-animate">
             <div class="col-12 p-3 text-center">
                 <div class="block-27">
@@ -191,6 +191,7 @@
                             </button>
                         </div>
                     </div>
+                    <!-- 設定上下邊線效果 區隔 header 和 footer -->
                     <div class="modal-body"
                          style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
                         <div class="row m-auto col-12 justify-content-center">
@@ -413,7 +414,7 @@
                 $("#animalId_static").text(data.animalId);
                 $("#animalName_static").text(data.animalName);
                 $("#animalKind_static").text(data.animalKind);
-                $("#animalVariet    y_static").text(data.animalVariety);
+                $("#animalVariety_static").text(data.animalVariety);
                 $("#animalSex_static").text(data.animalSex);
                 $("#animalAge_static").text(data.animalAge);
                 $("#animalBodysize_static").text(data.animalBodysize);
