--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -3,7 +3,7 @@
 <head>
 
     <script src="js/split.page.js"></script>
-    <title>收容所認養 - 寵物資訊平台</title>
+    <title>公立領養 -寵物資訊平台</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
@@ -67,7 +67,7 @@
                     <span><a class="text-shadow" href="/index">首頁 &gt;</a></span>
                     <span class="ion-ios-arrow-forward"></span>
                 </p>
-                <h1 class="mb-0 bread text-shadow">收容所認養</h1>
+                <h1 class="mb-0 bread text-shadow">公立領養</h1>
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
 
 <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb main-img" id="animalContext">
     <div class="container">
-        <div class="row col-auto p-3 ftco-animate text-center justify-content-center">
+        <div class="col-auto p-3 m-auto ftco-animate text-center d-flex flex-wrap justify-content-center">
             <div class="p-1">
                 <select class="col-auto custom-select" name="animalKind" id="kind">
                     <option>不分種類</option>
